--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 @layer base {
+	* {
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+	}
 	body {
 		background: #000;
 		color: #fff;
